# go-bazel-buildfarm

./: .bazelrc  .gitignore  BUILD  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  workspace_status.sh
build-container/: Dockerfile  Dockerfile.alpine
buildfarm_patch/: patch.diff
cmd/: BUILD.bazel  server.go
delve/: BUILD.bazel  Dockerfile
it-test/: BUILD.bazel  it_test.go
pkg/: BUILD.bazel  lib.go  lib_test.go
pkg/storage/: BUILD.bazel  googlestorage.go  googlestorage_test.go  localstorage.go  storage.go  storage_test.go
pkg/storage/component-test/: BUILD.bazel  googlestorage_component_test.go
pkg/storage/component-test/docker-compose/: .env  docker-compose-testrunner.yaml  docker-compose.yaml
pkg/storage/test-data/: test_cred.json  test_cred_invalid.json
rbe-config/cc/: BUILD  builtin_include_directory_paths  module.modulemap
rbe-config/config/: BUILD
rbe-container/: Dockerfile
tools/test_rules/: gen.bzl  run-test-in-docker-compose.sh  run-test-in-docker.sh  wrapper.sh
