load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = ["lib.go"],
    importpath = "github.com/gyturi1/go-bazel-buildfarm/pkg",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":pkg",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pkg_test",
    size = "small",
    srcs = ["lib_test.go"],
    embed = [":pkg"],
)
